@@ -1,3 +1,7 @@
+Tue Mar 20 16:24:26 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/replacements/gettimeofday.c src/apps/datacopy.c:
+	- remove warning
+
 Mon Mar 19 11:01:05 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/replacements.h: fix warning for win32
 
